--- a/gi-pro-mobile/www/templates/order-popover.html
+++ b/gi-pro-mobile/www/templates/order-popover.html
@@ -1,10 +1,10 @@
+<!--
 <ion-header-bar class="orderpopup-header">
   <h1 class="title">{{'oder_popup_title'|translate}}</h1>
 </ion-header-bar>
-<ion-content>
-  <div class="list">
-    <ion-radio ng-repeat="item in orderList" ng-class="radioDisabled(item) ? 'radio-disabled' : 'radio-enabled'" ng-value="item.value" ng-model="data.actualOrder" ng-disabled="radioDisabled(item)">
-      {{ item.text }}
-    </ion-radio>
-  </div>
-</ion-content>
+<div class="list">
+-->
+<ion-radio ng-repeat="item in orderList" ng-class="radioDisabled(item) ? 'radio-disabled' : 'radio-enabled'" ng-value="item.value" ng-model="data.actualOrder" ng-disabled="radioDisabled(item)">
+  {{ item.text }}
+</ion-radio>
+<!--</div>-->
