--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -14,47 +14,47 @@
         <button class="input-button button button-icon clear-button ion-android-close" ng-click="searchString=''"></button>
       </div>
     </div>
-
     <button class="button button-icon button-clear ion-search" ng-click="switchSearchBar()" ng-hide="searchBarVisible || !professionistTab"></button>
-    <!--not in this phase
-<button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionistTab"></button>
--->
+    <!-- not in this phase -->
+    <!--
+    <button class="button button-icon button-clear ion-android-funnel" ng-click="orderServices()" ng-hide="professionistTab"></button>
+    -->
     <button class="button button-icon button-clear" ng-class="{'ion-map':listVisualization, 'ion-ios-list-outline':!listVisualization}" ng-click="switchToMap()" ng-hide="searchBarVisible"></button>
   </ion-nav-buttons>
-  <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide':!logged}">
+
+  <ion-tabs class="tabs-calm" ng-class="{'tabs-item-hide': !logged}">
     <ion-tab title="{{'service_tab' | translate}}" on-select="initServiceMap()" ng-if="logged">
       <ion-pane>
         <ion-content>
-          <!--                    filter for services-->
+          <!-- filter for services -->
           <div class="selected-filters row" ng-if="!selectingFilter">
             <div class="col col-50 selected-service" ng-click="openFilters('service')"><span ng-if="filters.selectedService">{{'selectedService_label'|translate}}:{{filters.selectedService.name}}</span><span ng-if="!filters.selectedService">{{'allServices_label'|translate}}</span></div>
             <div class="col col-50 selected-zone" ng-click="openFilters('zone')"><span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span><span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span></div>
           </div>
-          <!--                    services-->
+          <!-- services -->
           <div class="services-list" ng-if="selectingFilter && selectingServices">
             {{'selectedService_label'|translate}}
             <div ng-click="selectFilter('service','service',null)">{{'allServices_label'|translate}}:</div>
             <div ng-repeat="service in filters.allServices" ng-click="selectFilter('service','service',service)">{{service.name}}</div>
           </div>
-          <!--                    zones-->
+          <!-- zones -->
           <div class="zones-list" ng-if="selectingFilter && selectingZones">
             {{'selectedZone_label'|translate}}
             <div ng-click="selectFilter('service','zone',null)">{{'allZones_label'|translate}}</div>
             <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('service','zone',zone)">{{zone.name}}</div>
           </div>
-          <div class="list-visualization" ng-if="listVisualization">
 
+          <div class="list-visualization" ng-if="listVisualization">
             <ion-list class="list">
               <ion-scroll>
                 <ion-refresher on-refresh="loadServices()">
                 </ion-refresher>
-                <div class="card" ng-repeat="service in filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})" ng-if="!!activeServices && activeServices.length > 0" ng-click="openRequestDetails(service)">
+                <div class="card" ng-repeat="service in filteredServices = (activeServices | filter :{service:filters.selectedService.name,zone:filters.selectedZone.name})" ng-if="!!activeServices && activeServices.length > 0" ng-click="openServiceDetails(service)">
                   <a class="item" ng-click="openDetailsService(service)">
                     <div><span>{{service.service}}</span></div>
                     <p>{{service.professional.name}}{{service.professional.surname}}</p>
                     <p class="list-service-cost">{{service.cost}}</p>
                   </a>
-
                 </div>
               </ion-scroll>
             </ion-list>
@@ -62,6 +62,7 @@
             </ion-infinite-scroll>
             <p ng-hide="filteredServices.length ">{{'services_empty' | translate}}</p>
           </div>
+
           <div class="map-visualization" ng-if="!listVisualization">
             <div id="modal-map-container" data-tap-disabled="true">
               <leaflet event-broadcast="events" center="center" markers="servicesMarkers" style="width: 100%; height: 700px;" ng-init="initServiceMap()" id="serviceMap"></leaflet>
@@ -74,30 +75,27 @@
     <ion-tab title="{{'prof_tab' | translate}}" on-select="initProfessionMap()">
       <ion-pane>
         <ion-content>
-
-          <!--                    filter for professionals-->
+          <!-- filter for professionals -->
           <div class="selected-filters row" ng-if="!selectingFilter">
             <div class="col col-50 selected-profession" ng-click="openFilters('profession')"> <span ng-if="filters.selectedProfession">{{'selectedProfession_label'|translate}}:{{filters.selectedProfession.name}}</span>
               <span ng-if="!filters.selectedProfession">{{'allProfession_label'|translate}}</span></div>
             <div class="col col-50 selected-zone" ng-click="openFilters('zone')"> <span ng-if="filters.selectedZone">{{'selectedZone_label'|translate}}:{{filters.selectedZone.name}}</span><span ng-if="!filters.selectedZone">{{'allZones_label'|translate}}</span>
             </div>
           </div>
-          <!--                    professions-->
+          <!-- professions -->
           <div class="professional-list" ng-if="selectingFilter && selectingProfession">
             {{'selectedProfession_label'|translate}}
             <div ng-click="selectFilter('profession','profession',null)">{{'allProfession_label'|translate}}</div>
             <div ng-repeat="profession in filters.allProfessions" ng-click="selectFilter('profession','profession',profession)">{{profession.name}}</div>
           </div>
-          <!--                    zones-->
+          <!-- zones -->
           <div class="zones-list" ng-if="selectingFilter && selectingZones">
             {{'selectedZone_label'|translate}}
             <div ng-click="selectFilter('profession','zone',null)">{{'allZones_label'|translate}}</div>
             <div ng-repeat="zone in filters.allZones" ng-click="selectFilter('profession','zone',zone)">{{zone.name}}</div>
-
           </div>
 
           <div class="list-visualization" ng-if="listVisualization">
-
             <ion-list class="list">
               <ion-scroll>
                 <ion-refresher on-refresh="loadProfessionist()">
